# sound-classification-using-esp32

./: CMakeLists.txt  README.md  espidf-run.fish  espidf-run.sh  index.html  model.h  my_mean_mfcc_classifier.tflite  onvert_tf_lite_to_cc_file.py  partition.csv  sdkconfig  sdkconfig.cmake  sdkconfig.defaults  sdkconfig.old
components/file_operations/: CMakeLists.txt
components/file_operations/include/: file_operations.h
components/file_operations/src/: file_operations.c
components/http_server/: CMakeLists.txt
components/http_server/data/: cert.der  index.html  privkey.der  privkey.pem  script.js  servercert.pem  style.css
components/http_server/include/: file_server.h  file_serving_example_common.h  https_server_hosting.h
components/http_server/src/: download_handlers.c  file_handlers.c  file_server.c  https_server_hosting.c  recording_handlers.c  server_main.c  static_handlers.c  upload_delete_handlers.c
components/model/: CMakeLists.txt
components/model/include/: model.h  model_predictor.h
components/model/src/: model_predictor.cpp
components/recorder/: CMakeLists.txt
components/recorder/include/: i2s_recorder.h  i2s_recorder_main.h
components/recorder/src/: i2s_recorder.c  i2s_recorder_main.c
components/wifi_server/: CMakeLists.txt
components/wifi_server/src/: station_mode_wifi.c
components/wifi_soft_access_point/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  i2s_recorder_main.c  idf_component.yml  main.c  mount.c
models/: fresh.ipynb
protocol_examples_common/: Kconfig.projbuild
web/: index.html  script.js  style.css
(+3 files in other folders)
